--- a/client/login/public/index.html
+++ b/client/login/public/index.html
@@ -8,7 +8,7 @@
     <link href="/openstorefront/webjars/roboto-fontface/0.9.0/css/roboto/roboto-fontface.css" rel="stylesheet" type="text/css"/>
     <link href="/openstorefront/webjars/material-icons/0.2.3/iconfont/material-icons.css" rel="stylesheet" type="text/css"/>
     <link href="/openstorefront/login/static/lib/fontawesome_5.2.0/css/all.min.css" rel="stylesheet" type="text/css"></script>
-    <!-- <script src="static/lib/particles.min.js"></script> -->
+    <script src="/openstorefront/login/static/lib/particles.min.js"></script>
     <title>SPOON</title>
   </head>
   <body>
