Add not logged in string to login page

--- a/client/login/public/index.html
+++ b/client/login/public/index.html
@@ -13,6 +13,7 @@
     <title>SPOON</title>
   </head>
   <body>
+    <!-- ***USER-NOT-LOGIN*** -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
